--- a/src/index.css
+++ b/src/index.css
@@ -105,3 +105,19 @@ a:hover {
 .search-input__textbox:focus {
   width: 400px !important;
 }
+@media (min-width: 800px) {
+  .movieselect {
+    margin-top: 15%;
+  }
+  .asset-detail{
+    margin-left: -15% !important;
+  }
+}
+@media (max-width: 800px) {
+  .imageShow {
+    background-size: cover;
+  }
+  .text-center{
+    width:"100%"
+  }
+}
