--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "Sky Text";
+  font-family: "Sans Serif";
 
   src: url("//db.onlinewebfonts.com/t/0073e3300330cceadd2ceaa220b38423.eot");
 
@@ -27,7 +27,7 @@ html {
   flex-direction: column;
   flex-grow: 1;
   font-family: "Sky Text", sans-serif !important;
-  font-weight: 300 !important;
+  font-weight: 400 !important;
 }
 
 body {
