--- a/src/views/player/player.css
+++ b/src/views/player/player.css
@@ -5,6 +5,7 @@
   .react-player {
     padding-top: 30%; 
     margin-left: 10%;
+    margin-top: -10%;
     position: relative; 
   }
   
@@ -15,4 +16,22 @@
     border: 0;
     margin-bottom: 0%;
     margin-top: -22%;
+}
+
+@media (max-width: 800px) {
+  .seek-range{
+    width: 100%;
+  }
+}
+@media (min-width: 800px) {
+  .seek-range{
+    width: 100%;
+  }
+}
+
+.seek-range1{
+  position: absolute;
+  margin-top: 7%;
+  width: 100%;
+  margin-left: 6%;
 }
